--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2a4365" /> <!-- Color institucional -->
     <!-- Verificación de Google -->
-  <meta name="google-site-verification" content="google6a3dece49ec23c24.html" />
+  <meta name="google-site-verification" content="6a3dece49ec23c24" />
+
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/Logo-HB.png" />
