--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/Logo-HB.png" />
+    <link rel="icon" type="image/ico" href="%PUBLIC_URL%/Favicon.ico" />
     
     <!-- SEO PRINCIPAL -->
     <title>Hockey Bariloche | AHByLS | Torneos Oficiales 2025</title>
