--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     <link rel="icon" type="image/ico" href="%PUBLIC_URL%/Favicon.ico" />
     
     <!-- SEO PRINCIPAL -->
-    <title>Hockey Bariloche | AHByLS | Torneos Oficiales 2025</title>
-    <meta name="description" content="Toda la info de Hockey pista en Bariloche. Calendario, resultados y contacto para torneos de hockey pista.">
-    <meta name="keywords" content="hockey bariloche, torneos hockey pista, AHByLS, calendario hockey 2025, asociación hockey bariloche">
+    <title>Hockey Bariloche 2025 | AHByLS | Torneos, Fixtures y Resultados</title>
+    <meta name="description" content=" Resultados en vivo, calendario de torneos 2025, toda la información del hockey pista en Bariloche.">
+    <meta name="keywords" content="hockey bariloche, hockey en bariloche, torneos hockey bariloche 2025, AHByLS, asociación hockey bariloche, fixtures hockey, resultados hockey bariloche, equipos hockey bariloche">
     
     <!-- Datos estructurados (IMPORTANTE para Google) -->
     <script type="application/ld+json">
